--- a/debian/changelog
+++ b/debian/changelog
@@ -56,6 +56,11 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
     configuration file. Closes: #316551
   * Fix the --force-depends-version option. Closes: #57104
 
+  [ Guillem Jover ]
+  * Standarize scripts usage output format and at the same time make
+    the strings easier for the translators. Add '--help' and '--version'
+    for most of the scripts. Print the usage and version to stdout.
+
   [ Updated dpkg Translations ]
   * Portuguese (Miguel Figueiredo).
   * Polish (Robert Luberda).
