--- a/man/C/dpkg-architecture.1
+++ b/man/C/dpkg-architecture.1
@@ -1,4 +1,4 @@
-.TH dpkg\-architecture 1 "2006-05-04" "Debian Project" "dpkg utilities"
+.TH dpkg\-architecture 1 "2006-05-23" "Debian Project" "dpkg utilities"
 .SH "NAME"
 dpkg\-architecture \- set and determine the architecture for package building
 .
@@ -67,6 +67,12 @@ the determined value.
 .TP
 .B \-L
 Print a list of valid architecture names.
+.TP
+.BR \-\-help
+Print a usage message.
+.TP
+.B \-\-version
+Print program version.
 .
 .SH "TERMS"
 .IP "build machine" 4
