--- a/man/C/dpkg-checkbuilddeps.1
+++ b/man/C/dpkg-checkbuilddeps.1
@@ -1,4 +1,4 @@
-.TH dpkg\-checkbuilddeps 1 "2006-02-28" "Debian Project" "dpkg utilities"
+.TH dpkg\-checkbuilddeps 1 "2006-05-23" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-checkbuilddeps - check build dependencies and conflicts
 .
@@ -18,6 +18,9 @@ may be specified on the command line.
 .B \-B
 Ignore \fIBuild\-Depends\-Indep\fR lines. Use when no arch-indep packages will
 be built.
+.TP
+.B \-h
+Print a usage message.
 .
 .SH AUTHOR
 Copyright 2001 Joey Hess
