--- a/man/C/dpkg-divert.8
+++ b/man/C/dpkg-divert.8
@@ -1,4 +1,4 @@
-.TH dpkg\-divert 8 "2006-05-04" "Debian Project" "dpkg utilities"
+.TH dpkg\-divert 8 "2006-05-23" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-divert - override a package's version of a file
 .
@@ -47,9 +47,6 @@ Set the dpkg data directory to \fI<directory>\fP (default: \fI/var/lib/dpkg\fP).
 .BI \-\-divert " <divert-to>"
 \fI<divert-to>\fP is the name used by other packages' versions.
 .TP
-.B \-\-help
-Output the version and the short usage instructions, and exit successfully.
-.TP
 .B \-\-local
 Specifies that all packages' versions are diverted.
 .TP
@@ -66,6 +63,9 @@ in case the destination file already exists.
 .TP
 .B \-\-test
 Test mode, i.e. don't actually perform any changes, just demonstrate.
+.TP
+.B \-\-help
+Output short usage instructions, and exit successfully.
 .TP
 .B \-\-version
 Output program name and version and exit successfully.
