--- a/man/C/dpkg-source.1
+++ b/man/C/dpkg-source.1
@@ -1,5 +1,5 @@
 .\" Authors: Ian Jackson
-.TH dpkg\-source 1 "2006-02-28" "Debian Project" "dpkg utilities"
+.TH dpkg\-source 1 "2006-05-23" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-source, dpkg\-gencontrol, dpkg\-shlibdeps, dpkg\-genchanges,
 dpkg\-buildpackage, dpkg\-distaddfile, dpkg\-parsechangelog
@@ -94,10 +94,15 @@ separate argument.
 Many of these programs share options; these are described here,
 together with the programs that accept them.
 .TP
-.BI \-h
-Display the particular program's version and usage message, including
-a synopsis of the options it understands. This option is understood
-by all the source package tools.
+.BR \-h , \-\-help
+Display the particular program's usage message, including a synopsis of
+the options it understands.
+This option is understood by all the source package tools.
+.TP
+.BR \-\-version
+Display the particular program's version, including copyright and license
+information.
+This option is understood by all the source package tools.
 .TP
 .BI \-v version
 In
