--- a/man/C/update-alternatives.8
+++ b/man/C/update-alternatives.8
@@ -5,7 +5,7 @@
 .\" by the Free Software Foundation; either version 2 of the License, or
 .\" (at your option) any later version.  There is NO WARRANTY.  You can
 .\" find the GNU GPL in /usr/share/common-licenses/GPL on any Debian system.
-.TH update\-alternatives 8 "2006-02-28" "Debian Project" "dpkg utilities"
+.TH update\-alternatives 8 "2006-05-23" "Debian Project" "dpkg utilities"
 .SH NAME
 update\-alternatives - maintain symbolic links determining default commands
 .
@@ -293,14 +293,12 @@ Don't actually do anything, just say what would be done.
 This option is not yet implemented.
 .TP
 .B \-\-help
-Give some usage information (and say which version of
-.B update\-alternatives
-this is).
+Give some usage information.
 .TP
 .B \-\-version
 Tell which version of
 .B update\-alternatives
-this is (and give some usage information).
+this is.
 .TP
 \fB\-\-altdir\fR \fIdirectory\fR
 Specifies the alternatives directory, when this is to be
