--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,12 @@
+2006-05-23  Guillem Jover  <guillem@debian.org>
+
+	* C/dpkg-source.1: Add '--help' and '--version' options.
+	* C/dpkg-architecture.1: Likewise.
+	* C/dpkg-checkbuilddeps.1: Add '-h' option.
+	* C/dpkg-divert.8: Option '--help' does not print the version anymore.
+	* C/update-alternatives.8: Likewise.
+	* C/dpkg-statoverride.8: Likewise. Add '--version' option.
+
 2006-05-21  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* man/*/*.po, man/C/po/*.pot, po4a/: Ease the work of i18n robots: make a
