--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-23  Guillem Jover  <guillem@debian.org>
+
+	* dpkg.pot: Regenerated.
+	* *.po: Merged with dpkg.pot. Formerly complete translations
+	become 742t76f121u.
+
 2006-05-15  Eddy Petrişor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Fixed some consitency issues;
