Do not strip the epoch from the source:Upstream-Version substvar. Closes: #366351

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-05-23  Guillem Jover  <guillem@debian.org>
 
+	* scripts/controllib.pl (parsechangelog): Do not strip the epoch from
+	the source:Upstream-Version substvar.
+
+2006-05-23  Guillem Jover  <guillem@debian.org>
+
 	* scripts/controllib.pl (usageerr): Use usage instead of
 	usageversion.
 	* scripts/dpkg-statoverride.pl (UsageVersion): Rename to ...
