--- a/man/C/dpkg-source.1
+++ b/man/C/dpkg-source.1
@@ -722,7 +722,8 @@ The current build architecture (from
 The source package version.
 .TP
 .B source:Upstream\-Version
-The upstream source package version.
+The upstream source package version, including the Debian version epoch if
+any.
 .TP
 .B binary:Version
 The binary package version (which may differ from source:Version in a binNMU
