Properly check and report lock file existence in install-info. Based on patch by Ben Pfaff. Closes: #368874

--- a/debian/changelog
+++ b/debian/changelog
@@ -62,6 +62,8 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
     for most of the scripts. Print the usage and version to stdout.
   * Do not strip the epoch from the source:Upstream-Version substvar.
     Closes: #366351
+  * Properly check and report lock file existence in install-info.
+    Based on patch by Ben Pfaff. Closes: #368874
 
   [ Updated dpkg Translations ]
   * Portuguese (Miguel Figueiredo).
