Correct default info directory for '--infodir' in intall-info man page (Ben Pfaff). Closes: #368875

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-25  Ben Pfaff  <blp@cs.stanford.edu>
+
+	* C/install-info.8: Correct default info directory for '--infodir'.
+
 2006-05-23  Guillem Jover  <guillem@debian.org>
 
 	* C/dpkg-source.1: Document that the source:Upstream-Version substvar
