--- a/debian/changelog
+++ b/debian/changelog
@@ -64,6 +64,8 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
     Closes: #366351
   * Properly check and report lock file existence in install-info.
     Based on patch by Ben Pfaff. Closes: #368874
+  * Correct default info directory for '--infodir' in intall-info man
+    page (Ben Pfaff). Closes: #368875
 
   [ Updated dpkg Translations ]
   * Portuguese (Miguel Figueiredo).
