--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-25  Guillem Jover  <guillem@debian.org>
+
+	* scripts/install-info.pl: Exit if the lock file already exists.
+	This change was lost when doing the i18n of the scripts.
+
 2006-05-25  Ben Pfaff  <blp@cs.stanford.edu>
 
 	* scripts/install-info.pl: Use %! instead if $! to check for EEXIST.
