Updated Galician translation of dpkg to 939t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -46,7 +46,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
     our file listing. Otherwise we might leave them behind on purge
     if we share them with other packages.
     Closes: #174180, #198128, #198522, #318825, #366178
-  
+
   [ Nicolas François ]
   * fix typos in the Russian man pages. Thanks to Stepan Golosunov.
     Closes: #366587
@@ -76,6 +76,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   * Czech (Miroslav Kure).
   * Simplified Chinese (Kov Tchai). Closes: #366985
   * Swedish (Peter Karlsson).
+  * Galician (Jacobo Tarrio).
 
   [ Updated dselect Translations ]
   * Polish (Robert Luberda).
@@ -86,7 +87,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   [ Updated man pages translations ]
   * Polish (Robert Luberda).
 
- -- Christian Perrier <bubulle@debian.org>  Sat, 13 May 2006 06:43:35 +0200
+ -- Jacobo Tarrio <jtarrio@debian.org>  Sat, 27 May 2006 20:18:10 +0200
 
 dpkg (1.13.19) unstable; urgency=low
 
