--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-27  Jacobo Tarrio  <jtarrio@debian.org>
+
+	* gl.po: Updated to 939t.
+
 2006-05-24  Clytie Siddall <clytie@riverland.net.au>
 
 	* vi.po: Updated Vietnamese translation.
