hu.po: updated to 669t

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-27  SZERVÁC Attila  <sas@321.hu>
+
+	* hu.po: Updated to 669t.
+
 2006-05-27  Jacobo Tarrio  <jtarrio@debian.org>
 
 	* gl.po: Updated to 939t.
