--- a/man/po4a/dselect.cfg.5/po/hu.po
+++ b/man/po4a/dselect.cfg.5/po/hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-02-21 12:06+0100\n"
+"PO-Revision-Date: 2006-05-27 23:31+0100\n"
 "Language-Team: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-2\n"
@@ -14,13 +14,13 @@ msgstr ""
 #: dselect.cfg.5:1
 #, no-wrap
 msgid "dselect.cfg"
-msgstr ""
+msgstr "dselect.cfg"
 
 # type: TH
 #: dselect.cfg.5:1
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "2006-02-28"
 
 # type: TH
 #: dselect.cfg.5:1
@@ -53,16 +53,8 @@ msgstr "LEÍRÁS"
 
 # type: Plain text
 #: dselect.cfg.5:11
-msgid ""
-"This file contains default options for dselect. Each line contains a single "
-"option which is exactly the same as a normal commandline option for dselect "
-"except for the leading dashes which are not used here. Comments are allowed "
-"by starting a line with a hash sign (\"B<#>\")."
-msgstr ""
-"E fájl tartalmazza a dselect alapbeállításait. Minden sor 1 lehetõséget "
-"tartalmaz, mely pontosan megfelel a sima parancssoros dpkg lehetõségeknek "
-"kivéve a vezetõ kötõjeleket, melyek itt nincsenek. Megjegyzések egy sor "
-"elején a (\"B<#>\") jellel lehetségesek."
+msgid "This file contains default options for dselect. Each line contains a single option which is exactly the same as a normal commandline option for dselect except for the leading dashes which are not used here. Comments are allowed by starting a line with a hash sign (\"B<#>\")."
+msgstr "E fájl tartalmazza a dselect alapbeállításait. Minden sor 1 lehetõséget tartalmaz, mely pontosan megfelel a sima parancssoros dpkg lehetõségeknek kivéve a vezetõ kötõjeleket, melyek itt nincsenek. Megjegyzések egy sor elején a (\"B<#>\") jellel lehetségesek."
 
 # type: SH
 #: dselect.cfg.5:12
@@ -72,15 +64,13 @@ msgstr "FÁJLOK"
 
 # type: Plain text
 #: dselect.cfg.5:14
-#, fuzzy
 msgid "I</etc/dpkg/dselect.cfg>"
-msgstr "I</etc/dpkg/dselect.cfg> ~/.dselect.cfg"
+msgstr "I</etc/dpkg/dselect.cfg>"
 
 # type: Plain text
 #: dselect.cfg.5:16
-#, fuzzy
 msgid "I<~/.dselect.cfg>"
-msgstr "B<dselect>(1)"
+msgstr "I<~/.dselect.cfg>"
 
 # type: SH
 #: dselect.cfg.5:17
@@ -90,13 +80,8 @@ msgstr "SZERZÕ"
 
 # type: Plain text
 #: dselect.cfg.5:20
-#, fuzzy
-msgid ""
-"See I</usr/share/doc/dpkg/THANKS> for the list of people who have "
-"contributed to B<dselect>."
-msgstr ""
-"Lásd a B</usr/share/doc/dpkg/THANKS> fájlt, melyben a B<dselect> program "
-"elkészítését segítõ személyek listája található."
+msgid "See I</usr/share/doc/dpkg/THANKS> for the list of people who have contributed to B<dselect>."
+msgstr "Lásd a I</usr/share/doc/dpkg/THANKS> fájlt, melyben a B<dselect> készítését segítõ személyek listája található."
 
 # type: SH
 #: dselect.cfg.5:21
@@ -106,14 +91,6 @@ msgstr "LÁSD MÉG"
 
 # type: Plain text
 #: dselect.cfg.5:22
-#, fuzzy
 msgid "B<dselect>(1)."
-msgstr "B<dselect>(1)"
+msgstr "B<dselect>(1)."
 
-# type: TH
-#~ msgid "DSELECT.CFG"
-#~ msgstr "DSELECT.CFG"
-
-# type: TH
-#~ msgid "February 2002"
-#~ msgstr "2002 Február"
