--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,10 @@
+2006-05-14  sas-guest  <sas@321.hu>
+
+	* hu/deb-control.5.hu.po: Updated translation.
+	* hu/dpkg-deb.1.hu.po: Updated translation.
+	* hu/dpkg.cfg.5.hu.po: Updated translation.
+	* hu/dselect.cfg.5.hu.po: Updated translation.
+
 2006-05-25  Ben Pfaff  <blp@cs.stanford.edu>
 
 	* C/install-info.8: Correct default info directory for '--infodir'.
