--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-29  Miroslav Kure  <kurem@upcase.inf.upol.cz>
+
+	* cs.po: Updated to 939t.
+
 2006-05-27  SZERVÁC Attila  <sas@321.hu>
 
 	* hu.po: Updated to 669t.
