Updated Slovak dpkg translation (848t0f91u)

--- a/debian/changelog
+++ b/debian/changelog
@@ -77,6 +77,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   * Simplified Chinese (Kov Tchai). Closes: #366985
   * Swedish (Peter Karlsson).
   * Galician (Jacobo Tarrio).
+  * Slovak (Peter Mann).
 
   [ Updated dselect Translations ]
   * Polish (Robert Luberda).
