--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-30  Peter Mann <Peter.Mann@tuke.sk>
+
+	* sk.po: Updated to 848t0f91u.
+
 2006-05-29  Miroslav Kure  <kurem@upcase.inf.upol.cz>
 
 	* cs.po: Updated to 939t.
