Updated Dutch dpkg translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -78,6 +78,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   * Swedish (Peter Karlsson).
   * Galician (Jacobo Tarrio).
   * Slovak (Peter Mann).
+  * Dutch (Bart Cornelis).
 
   [ Updated dselect Translations ]
   * Polish (Robert Luberda).
@@ -88,7 +89,9 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   [ Updated man pages translations ]
   * Polish (Robert Luberda).
 
- -- Jacobo Tarrio <jtarrio@debian.org>  Sat, 27 May 2006 20:18:10 +0200
+  * 
+
+ -- Bart Cornelis (cobaco) <cobaco@linux.be>  Tue, 30 May 2006 14:32:00 +0200
 
 dpkg (1.13.19) unstable; urgency=low
 
