Remove duplicated string " , at changelog " in dpkg-parsechangelog's debian style parser (Julian Gilbey). Closes: #369205

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-31  Julian Gilbey  <jdg@debian.org>
+
+	* scripts/changelog/debian.pl: Remove duped string ' , at changelog '.
+
 2006-05-31  Guillem Jover  <guillem@debian.org>
 
 	* src/enquiry.c (cmpversions): Prefix the bad syntax error with a
