Update the Section and Priority fields in the status file from the new packages. We assume that the information from the binary package is correct, otherwise it should be fixed there to match the archive override file (Koblinger Egmont). Closes: #54529, #58106, #81171, #230610, #237622, #237626

--- a/debian/changelog
+++ b/debian/changelog
@@ -70,6 +70,11 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
     when using '--compare-versions'. Closes: #369177
   * Remove duplicated string " , at changelog " in dpkg-parsechangelog's
     debian style parser (Julian Gilbey). Closes: #369205
+  * Update the Section and Priority fields in the status file from the
+    new packages. We assume that the information from the binary package
+    is correct, otherwise it should be fixed there to match the archive
+    override file (Koblinger Egmont).
+    Closes: #54529, #58106, #81171, #230610, #237622, #237626
 
   [ Updated dpkg Translations ]
   * Portuguese (Miguel Figueiredo).
