dpkg Basque translation (Piarres Beobide). Closes: #366185

--- a/debian/changelog
+++ b/debian/changelog
@@ -88,6 +88,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   * Galician (Jacobo Tarrio).
   * Slovak (Peter Mann).
   * Dutch (Bart Cornelis).
+  * Basque (Piarres Beobide). Closes: #366185
 
   [ Updated dselect Translations ]
   * Polish (Robert Luberda).
