scripts/po/dpkg-dev.pot: Regenerated. po/dpkg.pot: Regenerated. po/*.po: Merged with dpkg.pot. Formerly complete translations become 937t1f.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-31  Guillem Jover  <guillem@debian.org>
+
+	* dpkg.pot: Regenerated.
+	* *.po: Merged with dpkg.pot. Formerly complete translations
+	become 937t1f.
+
 2006-05-31  Piarres Beobide  <pi@beobide.net>
 
 	* eu.po: Updated to 740t77f121u.
