--- a/debian/changelog
+++ b/debian/changelog
@@ -76,6 +76,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
     override file (Koblinger Egmont).
     Closes: #54529, #58106, #81171, #230610, #237622, #237626
   * Bump Standards-Version to 3.7.2 (no changes needed).
+  * Add lintian overrides for dpkg, dpkg-dev, dselect and sources.
 
   [ Updated dpkg Translations ]
   * Portuguese (Miguel Figueiredo).
