--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-31  Guillem Jover  <guillem@debian.org>
+
+	* configure.ac: Release 1.13.20.
+
 2006-05-31  Koblinger Egmont  <egmont@uhulinux.hu>
 
 	* src/processarc.c (process_archive): Do not pass to parsedb
