--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.13.20~) UNRELEASED; urgency=low
+dpkg (1.13.20) unstable; urgency=low
 
   [ Frank Lichtenheld ]
   * Add gettext support for the Perl scripts. Based on a patch by
@@ -48,11 +48,11 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
     Closes: #174180, #198128, #198522, #318825, #366178
 
   [ Nicolas François ]
-  * fix typos in the Russian man pages. Thanks to Stepan Golosunov.
+  * Fix typos in the Russian man pages. Thanks to Stepan Golosunov.
     Closes: #366587
   * Honour tabbing requested via --showformat even if the field to
     be printed is empty. Closes: #361671
-  * flush the terminal's input before prompting what to do with a
+  * Flush the terminal's input before prompting what to do with a
     configuration file. Closes: #316551
   * Fix the --force-depends-version option. Closes: #57104
 
@@ -102,9 +102,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   [ Updated man pages translations ]
   * Polish (Robert Luberda).
 
-  * 
-
- -- Bart Cornelis (cobaco) <cobaco@linux.be>  Tue, 30 May 2006 14:32:00 +0200
+ -- Guillem Jover <guillem@debian.org>  Wed, 31 May 2006 07:43:16 +0300
 
 dpkg (1.13.19) unstable; urgency=low
 
