--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+dpkg (1.13.21~) UNRELEASED; urgency=low
+
+
+ -- Guillem Jover <guillem@debian.org>  Wed, 31 May 2006 08:03:11 +0300
+
 dpkg (1.13.20) unstable; urgency=low
 
   [ Frank Lichtenheld ]
