Disambiguate error message about conflicting command line actions by providing both long and short option names. Based on a suggestion by Josip Rodin. Closes: #45575

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 dpkg (1.13.21~) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
+  * Disambiguate error message about conflicting command line actions by
+    providing both long and short option names. Based on a suggestion by
+    Josip Rodin. Closes: #45575
 
  -- Guillem Jover <guillem@debian.org>  Wed, 31 May 2006 08:03:11 +0300
 
