--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-02  Guillem Jover  <guillem@debian.org>
+
+	* dpkg.pot: Regenerated.
+	* *.po: Merged with dpkg.pot. Formerly complete translations
+	become 937t1f.
+
 2006-05-31  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated.
