Add '/lib32' and '/usr/lib32' to the dpkg-shlibdeps library path search list. Closes: #367892

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-06-02  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-shlibdeps.pl (@librarypaths): Add '/lib32' and
+	'/usr/lib32/'.
+
+2006-06-02  Guillem Jover  <guillem@debian.org>
+
 	* src/query.c (setaction): Print also the short command line action.
 	* src/main.c (setaction): Likewise.
 	* dpkg-deb/main.c (setaction): Likewise.
