--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ dpkg (1.13.21~) UNRELEASED; urgency=low
   * Disambiguate error message about conflicting command line actions by
     providing both long and short option names. Based on a suggestion by
     Josip Rodin. Closes: #45575
+  * Add '/lib32' and '/usr/lib32' to the dpkg-shlibdeps library path search
+    list. Closes: #367892
 
  -- Guillem Jover <guillem@debian.org>  Wed, 31 May 2006 08:03:11 +0300
 
