--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-02  Clytie Siddall <clytie@riverland.net.au>
+
+	* vi.po: Updated Vietnamese translation.
+
 2006-05-02  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated.
