2006-06-02  Clytie Siddall <clytie@riverland.net.au>
	* vi.po: Updated Vietnamese translation.

--- a/po/vi.po
+++ b/po/vi.po
@@ -3,12 +3,13 @@
 # This file is distributed under the same license as the dpkg package.
 # Phan Vinh Thinh <teppi@vnoss.org>, 2005.
 # Clytie Siddall <clytie@riverland.net.au>, 2006.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-06-02 03:58+0300\n"
-"PO-Revision-Date: 2006-05-24 23:14+0930\n"
+"PO-Revision-Date: 2006-06-02 15:48+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <gnomevi-list@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -1834,9 +1835,9 @@ msgid "--compare-versions bad relation"
 msgstr "« --compare-versions » (so sánh phiên bản) quan hệ sai"
 
 #: src/enquiry.c:429 src/enquiry.c:440
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: version '%s' has bad syntax: %s\n"
-msgstr "phiên bản b có cú pháp sai: %s\n"
+msgstr "dpkg: phiên bản « %s » có cú pháp sai: %s\n"
 
 #: src/errors.c:58
 #, c-format
@@ -2471,9 +2472,9 @@ msgstr ""
 "hãy gởi hết qua ống dẫn tới chương trình « less » hoặc « more »."
 
 #: src/main.c:206 src/query.c:544 dpkg-deb/main.c:177 dpkg-split/main.c:157
-#, fuzzy, c-format
+#, c-format
 msgid "conflicting actions -%c (--%s) and -%c (--%s)"
-msgstr "hành động xung đột « --%s » và « --%s »"
+msgstr "hành động xung đột « -%c (--%s) » và « -%c  (--%s) »"
 
 #: src/main.c:212
 #, c-format
@@ -5691,6 +5692,3 @@ msgstr "thiếu ký tự dòng mới sau %s"
 #, perl-format
 msgid "Serious problem: %s"
 msgstr "Gặp lỗi nghiêm trọng: %s"
-
-#~ msgid "version a has bad syntax: %s\n"
-#~ msgstr "phiên bản a có cú pháp sai: %s\n"
