Revert usage of English perl non-essential module from install-info. Closes: #369928

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ dpkg (1.13.21~) UNRELEASED; urgency=low
     Josip Rodin. Closes: #45575
   * Add '/lib32' and '/usr/lib32' to the dpkg-shlibdeps library path search
     list. Closes: #367892
+  * Revert usage of English perl non-essential module from install-info.
+    Closes: #369928
 
  -- Guillem Jover <guillem@debian.org>  Wed, 31 May 2006 08:03:11 +0300
 
