[l10n] Updated Czech translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ dpkg (1.13.21~) UNRELEASED; urgency=low
   * Revert usage of English perl non-essential module from install-info.
     Closes: #369928
 
+  [ Updated dpkg Translations ]
+  * Czech (Miroslav Kure).
+
  -- Guillem Jover <guillem@debian.org>  Wed, 31 May 2006 08:03:11 +0300
 
 dpkg (1.13.20) unstable; urgency=low
