--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-02  Miroslav Kure  <kurem@upcase.inf.upol.cz>
+
+	* cs.po: Updated to 938t.
+
 2006-06-02  Clytie Siddall <clytie@riverland.net.au>
 
 	* vi.po: Updated Vietnamese translation.
