Add Vietnamese changes. Add bug closure to the English module using bug.

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,10 +7,11 @@ dpkg (1.13.21~) UNRELEASED; urgency=low
   * Add '/lib32' and '/usr/lib32' to the dpkg-shlibdeps library path search
     list. Closes: #367892
   * Revert usage of English perl non-essential module from install-info.
-    Closes: #369928
+    Closes: #369928, #369958
 
   [ Updated dpkg Translations ]
   * Czech (Miroslav Kure).
+  * Vietnamese (Clytie Siddall).
 
  -- Guillem Jover <guillem@debian.org>  Wed, 31 May 2006 08:03:11 +0300
 
@@ -137,7 +138,7 @@ dpkg (1.13.19) unstable; urgency=low
   * Swedish (Peter Karlsson).
   * Danish (Claus Hindsgaul). Closes: #362317
   * Czech (Miroslav kure).
-  * Vietnamese  (Clytie Siddall). Closes: #363264
+  * Vietnamese (Clytie Siddall). Closes: #363264
   * Spanish (Javier Fernández-Sanguino Peña). Closes: #357911
   * Basque (Piarres Beobide). Closes: #363683, #363679
   * Japanese (Kenshi Muto). Closes: #365334
