Fix dependency cycle breaking in the case when every link involves a Provides (Ian Jackson). This is a proper fix for #349442. Closes: #370017

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ dpkg (1.13.21~) UNRELEASED; urgency=low
     Closes: #369928, #369958, #370157, #370174, #370210
   * Print the correct file being parsed by dpkg-parsechangelog's debian
     parser. Closes: #368961
+  * Fix dependency cycle breaking in the case when every link involves
+    a Provides (Ian Jackson). This is a proper fix for #349442.
+    Closes: #370017
 
   [ Updated dpkg Translations ]
   * Czech (Miroslav Kure).
