--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-04  Guillem Jover  <guillem@debian.org>
+
+	* configure.ac: Release 1.13.21.
+
 2006-06-04  Ian Jackson  <ian@davenant.greenend.org.uk>
 
 	* src/depcon.c (foundcyclebroken): Replace possi->ed argument to
