--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.13.21~) UNRELEASED; urgency=low
+dpkg (1.13.21) unstable; urgency=low
 
   [ Guillem Jover ]
   * Disambiguate error message about conflicting command line actions by
@@ -18,7 +18,7 @@ dpkg (1.13.21~) UNRELEASED; urgency=low
   * Czech (Miroslav Kure).
   * Vietnamese (Clytie Siddall).
 
- -- Guillem Jover <guillem@debian.org>  Wed, 31 May 2006 08:03:11 +0300
+ -- Guillem Jover <guillem@debian.org>  Sun,  4 Jun 2006 19:02:44 +0300
 
 dpkg (1.13.20) unstable; urgency=low
 
