--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.13.22~) UNRELEASED; urgency=low
+
+  * 
+
+ -- Guillem Jover <guillem@debian.org>  Sun,  4 Jun 2006 19:27:55 +0300
+
 dpkg (1.13.21) unstable; urgency=low
 
   [ Guillem Jover ]
