--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 dpkg (1.13.22~) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
+  * Version the po4a Build-Depends to >= 0.23 as we are using options
+    introduced in that version. Thanks to Sergio Gelato. Closes: #370536
+
   [ Updated dpkg Translations ]
   * Romanian (Eddy Petrişor).
   * Galician (Jacobo Tarrio).
