Add '.bzrtags' directory to default dpkg-source -i regex. Suggested by Adeodato SimÃ³. Closes: #370392

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Version the po4a Build-Depends to >= 0.23 as we are using options
     introduced in that version. Thanks to Sergio Gelato. Closes: #370536
+  * Add '.bzrtags' directory to default dpkg-source -i regex.
+    Suggested by Adeodato Simó. Closes: #370392
 
   [ Updated dpkg Translations ]
   * Romanian (Eddy Petrişor).
