--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-07  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-source.pl ($diff_ignore_default_regexp): Add
+	'.bzrtags'.
+
 2006-06-04  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.13.22~.
