* scripts/dpkg-scansources.pl: Remove invalid comment mentioning 	documentation being after __END__.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-06-07  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-scansources.pl: Remove invalid comment mentioning
+	documentation being after __END__.
+
+2006-06-07  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-source.pl ($diff_ignore_default_regexp): Add
 	'.bzrtags'.
 
