French translation updated

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-08  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Updated to 936t2f (thanks Fred Bothamy).
+
 2006-06-06  Jacobo Tarrio  <jtarrio@debian.org>
 
 	* gl.po: Updated to 938t.
