--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
   [ Updated dpkg Translations ]
   * Romanian (Eddy Petrişor).
   * Galician (Jacobo Tarrio).
+  * French (Christian Perrier).
 
  -- Jacobo Tarrio <jtarrio@debian.org>  Tue,  6 Jun 2006 21:26:46 +0200
 
