--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,6 @@
 2006-06-08  Christian Perrier  <bubulle@debian.org>
 
-	* fr.po: Updated to 936t2f (thanks Fred Bothamy).
+	* fr.po: Updated to 938t (thanks Fred Bothamy).
 
 2006-06-06  Jacobo Tarrio  <jtarrio@debian.org>
 
