--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
   * Romanian (Eddy Petrişor).
   * Galician (Jacobo Tarrio).
   * French (Christian Perrier).
+  * Swedish (Peter Karlsson).
 
  -- Jacobo Tarrio <jtarrio@debian.org>  Tue,  6 Jun 2006 21:26:46 +0200
 
