--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-09  Peter Karlsson  <peterk@debian.org>
+
+	* sv.po: Updated to 779t50f109u.
+
 2006-06-08  Christian Perrier  <bubulle@debian.org>
 
 	* fr.po: Updated to 938t (thanks Fred Bothamy).
