--- a/po/sv.po
+++ b/po/sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.13.11.0.1\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-06-02 03:58+0300\n"
-"PO-Revision-Date: 2006-05-14 15:45+0100\n"
+"PO-Revision-Date: 2006-06-09 07:26+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1819,9 +1819,9 @@ msgid "--compare-versions bad relation"
 msgstr "--compare-versions: ogiltig relation"
 
 #: src/enquiry.c:429 src/enquiry.c:440
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: version '%s' has bad syntax: %s\n"
-msgstr "version b har felaktig syntax: %s\n"
+msgstr "dpkg: version \"%s\" har felaktig syntax: %s\n"
 
 #: src/errors.c:58
 #, c-format
@@ -2372,9 +2372,9 @@ msgstr ""
 "\"!"
 
 #: src/main.c:206 src/query.c:544 dpkg-deb/main.c:177 dpkg-split/main.c:157
-#, fuzzy, c-format
+#, c-format
 msgid "conflicting actions -%c (--%s) and -%c (--%s)"
-msgstr "motstridiga åtgärder --%s och --%s"
+msgstr "motstridiga åtgärder %c (--%s) och -%c (--%s)"
 
 #: src/main.c:212
 #, c-format
@@ -3370,9 +3370,9 @@ msgstr ""
 "nyradstecken på slutet\n"
 
 #: dpkg-deb/build.c:291
-#, fuzzy, c-format
+#, c-format
 msgid "warning, conffile filename `%s' contains trailing white spaces\n"
-msgstr "varning, konfigurationsfieln \"%s\" är inte en vanlig fil\n"
+msgstr "varning, konfigurationsfilnamnet \"%s\" innehåller avslutande blanksteg\n"
 
 #: dpkg-deb/build.c:293
 #, c-format
@@ -3387,7 +3387,7 @@ msgstr "kunde inte ta status på konfigurationsfilen \"%.50s\""
 #: dpkg-deb/build.c:297
 #, c-format
 msgid "warning, conffile `%s' is not a plain file\n"
-msgstr "varning, konfigurationsfieln \"%s\" är inte en vanlig fil\n"
+msgstr "varning, konfigurationsfilen \"%s\" är inte en vanlig fil\n"
 
 #: dpkg-deb/build.c:302
 msgid "error reading conffiles file"
@@ -4271,29 +4271,28 @@ msgstr "kunde inte exekvera mksplit"
 #: scripts/cleanup-info.pl:36 scripts/dpkg-divert.pl:16
 #: scripts/dpkg-statoverride.pl:22 scripts/install-info.pl:18
 #: scripts/update-alternatives.pl:37
-#, fuzzy, perl-format
+#, perl-format
 msgid "Debian %s version %s.\n"
-msgstr "Debian \"%s\" paketarkiveringsprogram version %s.\n"
+msgstr "Debian %s version %s.\n"
 
 #: scripts/cleanup-info.pl:38
-#, fuzzy
 msgid ""
 "\n"
 "Copyright (C) 1996 Kim-Minh Kaplan."
-msgstr "Copyright © 1994-1996 Ian Jackson.\n"
+msgstr "\n"
+"Copyright © 1996 Kim-Minh Kaplan."
 
 #: scripts/cleanup-info.pl:41 scripts/dpkg-divert.pl:22
 #: scripts/dpkg-statoverride.pl:27 scripts/install-info.pl:23
 #: scripts/update-alternatives.pl:43
-#, fuzzy
 msgid ""
 "\n"
 "This is free software; see the GNU General Public Licence version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
 msgstr ""
-"Detta program är fri programvara. Se GNU General Public License version 2\n"
+"\n"
+"Detta är fri programvara; Se GNU General Public License version 2\n"
 "eller senare för kopieringsvillkor. Det finns INGEN garanti.\n"
-"Se %s --licence för upphovsrättsliga och licenstekniska detaljer.\n"
 
 #: scripts/cleanup-info.pl:49
 #, perl-format
@@ -4308,82 +4307,80 @@ msgid ""
 msgstr ""
 
 #: scripts/cleanup-info.pl:66 scripts/install-info.pl:501
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: warning - unable to unlock %s: %s"
-msgstr "dpkg: varning - kunde inte ta status på %s \"%.250s\": %s\n"
+msgstr "%s: varning - kunde inte låsa upp %s: %s"
 
 #: scripts/cleanup-info.pl:86 scripts/install-info.pl:120
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: unknown option `%s'"
-msgstr "okänd flagga --%s"
+msgstr "%s: okänd flagga \"%s\""
 
 #: scripts/cleanup-info.pl:94 scripts/install-info.pl:131
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: too many arguments"
-msgstr "--%s tar inget argument"
+msgstr "%s: för många argument"
 
 #: scripts/cleanup-info.pl:101 scripts/install-info.pl:306
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: failed to lock dir for editing! %s"
-msgstr "%s: kunde inte exekvera gzip %s"
+msgstr "%s: kunde inte låsa katalog för redigering! %s"
 
 #: scripts/cleanup-info.pl:103
 #, perl-format
 msgid "try deleting %s"
-msgstr ""
+msgstr "testa att ta bort %s"
 
 #: scripts/cleanup-info.pl:107
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: can't open %s: %s"
-msgstr "kunde inte öppna logg \"%s\": %s\n"
+msgstr "%s: kunde inte öppna %s: %s"
 
 #: scripts/cleanup-info.pl:110
 #, perl-format
 msgid "%s: can't create %s: %s"
-msgstr ""
+msgstr "%s: kan inte skapa %s: %s"
 
 #: scripts/cleanup-info.pl:122
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: error writing %s: %s"
-msgstr "fel vid skrivning av \"%s\""
+msgstr "%s: fel vid skrivning av %s: %s"
 
 #: scripts/cleanup-info.pl:162 scripts/install-info.pl:166
 #: scripts/install-info.pl:208
 #, perl-format
 msgid "%s: read %s: %s"
-msgstr ""
+msgstr "%s: läsa %s: %s"
 
 #: scripts/cleanup-info.pl:164
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: close %s after read: %s"
-msgstr "kunde inte stänga efter läsning: \"%.255s\""
+msgstr "%s: stänga %s efter läsning: %s"
 
 #: scripts/cleanup-info.pl:168
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: error closing %s: %s"
-msgstr ""
-"%s: fel vid hantering av %s (--%s):\n"
-" %s\n"
+msgstr "%s: fel vid stängning av %s: %s"
 
 #: scripts/cleanup-info.pl:174
 #, perl-format
 msgid "%s: can't backup old %s, giving up: %s"
-msgstr ""
+msgstr "%s: kunde inte ta säkerhetskopia av gammal %s, ger upp: %s"
 
 #: scripts/cleanup-info.pl:177
 #, perl-format
 msgid "%s: failed to install %s; I'll leave it as %s: %s"
-msgstr ""
+msgstr "%s: kunde inte avinstallera %s; jag behåller den som %s: %s"
 
 #: scripts/cleanup-info.pl:181
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: failed to unlock %s: %s"
-msgstr "%s: kunde inte exekvera gzip %s"
+msgstr "%s: kunde inte låsa upp: %s"
 
 #: scripts/dpkg-divert.pl:12 scripts/update-alternatives.pl:33
 #, perl-format
 msgid "Cannot get ENOENT value from %s: %s"
-msgstr ""
+msgstr "Kunde inte hämta ENOENT-värde från %s: %s"
 
 #: scripts/dpkg-divert.pl:18
 msgid ""
@@ -4421,95 +4418,110 @@ msgid ""
 "Package preinst/postrm scripts should always specify --package and --"
 "divert.\n"
 msgstr ""
+"Använd: %s [<flagga> ...] <kommando>\n"
+"\n"
+"Kommandon:\n"
+"  [--add] <fil>            lägg till en omdirigering.\n"
+"  --remove <fil>           ta bort omdirigeringen.\n"
+"  --list [<jokertecken>]   visa omdirigeringar för fil.\n"
+"  --truename <fil>         visa den omdirigerade filen.\n"
+"\n"
+"Flaggor:\n"
+"  --package <paket>        namn på paketet vars exemplar av <fil> inte skall\n"
+"                           omdirigeras.\n"
+"  --local                  versioner från alla paket omdirigeras.\n"
+"  --divert <mål>           namnet som används av andra pakets versioner.\n"
+"  --rename                 flytta faktiskt bort filen (eller tillbaka).\n"
+"  --admindir <katalog>     välj katalog för omdirigeringsfilen.\n"
+"  --test                   gör ingenting, bara demonstrera.\n"
+"  --quiet                  arbeta tyst, med minimal utdata.\n"
+"  --help                   visa detta hjälpmeddelande.\n"
+"  --version                visa versionen.\n"
+"\n"
+"När du lägger till är förval --local och --divert <original>.distrib.\n"
+"När du tar bort måste --package eller --local samt --divert stämma om de\n"
+"anges. Skripten preinst/postrm i paket skall alltid ange --package och "
+"--divert.\n"
 
 #: scripts/dpkg-divert.pl:64 scripts/update-alternatives.pl:95
 #, perl-format
 msgid "two modes specified: %s and --%s"
-msgstr ""
+msgstr "två lägen angivna: %s och --%s"
 
 #: scripts/dpkg-divert.pl:97
-#, fuzzy
 msgid "--divert needs a divert-to argument"
-msgstr "--build behöver ett katalogargument"
+msgstr "--divert behöver ett mål som argument"
 
 #: scripts/dpkg-divert.pl:99
 msgid "divert-to may not contain newlines"
-msgstr ""
+msgstr "målet kan inte innehålla radbrytningar"
 
 #: scripts/dpkg-divert.pl:101
-#, fuzzy
 msgid "--package needs a package argument"
-msgstr "--%s behöver åtminstone ett paket som argument"
+msgstr "--package behöver ett paket som argument"
 
 #: scripts/dpkg-divert.pl:103
-#, fuzzy
 msgid "package may not contain newlines"
-msgstr "Paketet \"%s\" innehåller inga filer (!)\n"
+msgstr "paket kan inte innehålla radbrytningar"
 
 #: scripts/dpkg-divert.pl:105 scripts/dpkg-statoverride.pl:74
-#, fuzzy
 msgid "--admindir needs a directory argument"
-msgstr "--build behöver ett katalogargument"
+msgstr "--admindir behöver ett katalogargument"
 
 #: scripts/dpkg-divert.pl:108 scripts/dpkg-statoverride.pl:86
 #: scripts/update-alternatives.pl:145
-#, fuzzy, perl-format
+#, perl-format
 msgid "unknown option `%s'"
-msgstr "okänd flagga --%s"
+msgstr "okänd flagga \"%s\""
 
 #: scripts/dpkg-divert.pl:114
-#, fuzzy, perl-format
+#, perl-format
 msgid "cannot open diversions: %s"
-msgstr "kunde inte öppna omdirigeringsfil"
+msgstr "kunde inte öppna omdirigeringsfil: %s"
 
 #: scripts/dpkg-divert.pl:117
-#, fuzzy
 msgid "missing altname"
-msgstr "saknat %s"
+msgstr "saknat alternativt namn"
 
 #: scripts/dpkg-divert.pl:119
-#, fuzzy
 msgid "missing package"
-msgstr "saknat %s"
+msgstr "saknat paket"
 
 #: scripts/dpkg-divert.pl:125
-#, fuzzy
 msgid "--add needs a single argument"
-msgstr "--build behöver ett katalogargument"
+msgstr "--add behöver ett ensamt argument"
 
 #: scripts/dpkg-divert.pl:127 scripts/dpkg-divert.pl:131
-#, fuzzy, perl-format
+#, perl-format
 msgid "filename \"%s\" is not absolute"
-msgstr "kunde inte ta status på konfigurationsfilen \"%.50s\""
+msgstr "filnamnet \"%s\" är inte absolut"
 
 #: scripts/dpkg-divert.pl:128 scripts/dpkg-statoverride.pl:118
 msgid "file may not contain newlines"
-msgstr ""
+msgstr "filnamnet kan inte innehålla radbrytningar"
 
 #: scripts/dpkg-divert.pl:129
-#, fuzzy
 msgid "Cannot divert directories"
-msgstr "kan inte läsa infokatalog"
+msgstr "Kan inte omdirigera kataloger"
 
 #: scripts/dpkg-divert.pl:138
-#, fuzzy, perl-format
+#, perl-format
 msgid "Leaving `%s'"
-msgstr "fel vid skrivning av \"%s\""
+msgstr "Låter \"%s\" vara"
 
 #: scripts/dpkg-divert.pl:141
 #, perl-format
 msgid "`%s' clashes with `%s'"
-msgstr ""
+msgstr "\"%s\" krockar med \"%s\""
 
 #: scripts/dpkg-divert.pl:147
 #, perl-format
 msgid "Adding `%s'"
-msgstr ""
+msgstr "Lägger till \"%s\""
 
 #: scripts/dpkg-divert.pl:153
-#, fuzzy
 msgid "--remove needs a single argument"
-msgstr "--%s behöver ett .deb-filnamn som argument"
+msgstr "--remove behöver ett ensamt argument"
 
 #: scripts/dpkg-divert.pl:157
 #, perl-format
