--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,6 @@
 2006-06-09  Peter Karlsson  <peterk@debian.org>
 
-	* sv.po: Updated to 779t50f109u.
+	* sv.po: Updated to 939t.
 
 2006-06-08  Christian Perrier  <bubulle@debian.org>
 
