--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-09  Peter Karlsson <peterk@debian.org>
+
+	* dselect.1/po/sv.po: Updated translation.
+
 2006-05-14  sas-guest  <sas@321.hu>
 
 	* hu/deb-control.5.hu.po: Updated translation.
